[package]
name = "argminmax"
version = "0.4.0"
authors = ["Jeroen Van Der Donckt"]
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/jvdd/argminmax"
description = "ArgMinMax (argmin & argmax in 1 function) with SIMD for floats and integers"
keywords = ["argminmax", "simd", "ndarray"]
categories = ["algorithms", "mathematics", "science"]


[dependencies]
num-traits = { version = "0.2.15", default-features = false }
half = { version = "2.1.0", default-features = false, features=["num-traits"], optional = true }
ndarray = { version = "0.15.6", default-features = false, optional = true}
arrow = { version = ">0", default-features = false, optional = true}
# once_cell = "1.16.0"

[features]
default = ["half"] # TODO: remove this as default feature as soon as https://github.com/CodSpeedHQ/codspeed-rust/issues/1 is fixed

[dev-dependencies]
rstest = { version = "0.16", default-features = false }
rstest_reuse = { version = "0.5", default-features = false }
rand = { version = "0.7.2", default-features = false }
codspeed-criterion-compat = "1.0.1"
criterion = "0.3.1"
dev_utils = { path = "dev_utils" }


[[bench]]
name = "bench_f16_return_nan"
harness = false
required-features = ["half"]

# TODO: support this
# [[bench]]
# name = "bench_f16_ignore_nan"
# harness = false
# required-features = ["half"]

[[bench]]
name = "bench_f32_return_nan"
harness = false

[[bench]]
name = "bench_f32_ignore_nan"
harness = false

[[bench]]
name = "bench_f64_return_nan"
harness = false

[[bench]]
name = "bench_f64_ignore_nan"
harness = false

[[bench]]
name = "bench_i8"
harness = false

[[bench]]
name = "bench_i16"
harness = false

[[bench]]
name = "bench_i32"
harness = false

[[bench]]
name = "bench_i64"
harness = false

[[bench]]
name = "bench_u8"
harness = false

[[bench]]
name = "bench_u16"
harness = false

[[bench]]
name = "bench_u32"
harness = false

[[bench]]
name = "bench_u64"
harness = false
