[package]
name = "dev_utils"
version = "0.1.2"
authors = ["Jeroen Van Der Donckt"]
edition = "2021"
description = "Shared utilities for development (tests & benchmarks)"

[dependencies]
num-traits = { version = "0.2.17", default-features = false }
half = { version = "2.3.1", default-features = false, features = ["num-traits", "rand_distr"] }
rand = { version = "0.8.5" }
